Mon Jun 23 11:32:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_copy_ivar): extract function to copy instance
	  variables only for T_OBJECT from init_copy.

Mon Jun 23 11:11:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (check_stack_overflow): drop the last tag too close to
	  the fault page, to get rid of stack overflow deadlock.
	  [Bug #9971]

Sun Jun 22 09:11:15 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb: remove registry.
	  'registry' is not used and RFC3986 doesn't use it.

Sun Jun 22 09:10:09 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc3986_parser.rb: raise exception when given a URI string
	  has non ASCII in order to keep the regexp compiled for US-ASCII.

Sun Jun 22 09:05:42 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI::REGEXP): move to lib/uri/rfc2396_parser.rb.

	* lib/uri/common.rb (URI::Parser): ditto.

	* lib/uri/common.rb (URI.split): use RFC3986_Parser. [Feature #2542]

	* lib/uri/common.rb (URI.parse): ditto.

	* lib/uri/common.rb (URI.join): ditto.

	* lib/uri/common.rb (URI.extract): deprecated.

	* lib/uri/common.rb (URI.regexp): ditto.

	* lib/uri/rfc2396_parser.rb: added.

	* lib/uri/rfc3986_parser.rb: added.

Sun Jun 22 09:04:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/mailto.rb (initialize): as previous commit, fix arg_check

Sun Jun 22 09:01:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/ftp.rb (initialize): argument checking flag is arg_check,
	  but arg[-1] is fragment.

	* lib/uri/ftp.rb (initialize): explicitly specify arguments.

Sat Jun 21 12:50:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: supply 0 to fill RUBY_LIBFFI_MODVERSION
	  with 3-digit.  libffi 3.1 returns just 2-digit.
	  [ruby-core:62920] [Bug #9897]

Sat Jun 21 07:06:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_find): [DOC] never accepted a symbol.
	  [ruby-dev:48308] [Bug #9966]
